static/style.css
@import url('https://rsms.me/inter/inter.css');
@supports (font-variation-settings: normal) {
  html { 
    font-family: 'Inter var', sans-serif; 
    font-feature-settings: 'ss01' 1, 'kern' 1, 'liga' 1, 'zero' 1, 
    'cv03' 1, 'cv02' 1, 'cv04' 1, 'tnum' 1; 
  }
}

:root {
  --cyan: #00cece;
  --light-gray: #eee;
  --gray: gray;
  --code: #666;
  --dark: #222;
  --sel: #444;
}

body {
  text-align: center;
}

html {
  font-size: 18px;
  line-height: 1.5;
}

.navbar {
  margin: 2px 0;
}

.sidebar-link {
  font-size: 15px;
  color: var(--dark);
}

.container {
  padding-top: 1%;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

.pull-right {
  padding-top: 20%;
  padding-left: 7%;
  text-align: left;
  grid-column: 1 / 12;
  grid-row: 2;
}

.pull-right p:not(:last-child) {
  padding: 0px;
  margin: 0px;
  padding-top: 2%;
  padding-left: 3%;
  padding-bottom: 3%;
}

.pull-right h3 {
  color: var(--dark);
  padding: 0px;
  margin: 0px;
  padding-top: 7%;
  padding-left: 3%;
}

.pull-left {
  grid-column: 1 / 12;
  grid-row: 1;
}

.sep {
  display: visible;
}

.content {
  text-align: left;
  margin: 0 auto;
  padding: 0 3rem;
}

@media only screen and (min-width: 1080px) {
  .pull-right {
    text-align: left;
    grid-column: 10;
    grid-row: 1;
  }

  .sep {
    display: hidden;
  }

  .pull-left {
    grid-column: 3 / 10;
    grid-row: 1;
  }
  .content {
    margin: 0 auto;
  }
  
  html {
    font-size: 18px;
  }
}

@media only screen and (min-width: 1400px) {
  .pull-right {
    text-align: left;
    grid-column: 9;
    grid-row: 1;
  }

  .sep {
    display: hidden;
  }
  .pull-left {
    grid-column: 4 / 9;
    grid-row: 1;
  }
  .content {
    margin: 0 auto;
  }

  html {
    font-size: 18px;
  }
}

pre, pre code {
  padding: 10px;
  color: var(--code);
  word-wrap: break-word;
  overflow-x: auto;
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  border: 0px solid transparent;
  border-radius: 5px;
}


code {
  color: var(--cyan); padding: 2px;
  border: 0px solid transparent;
  border-radius: 5px;
  border-bottom: unset;
}

.logo {
  width: 180px;
}

footer {
  color: var(--gray);
  bottom: 20px;
  width: 100%;
  text-align: center;
  margin-bottom: 20px;
}

header {
  color: var(--cyan);
  top: 30px;
  display: inline-block;
  width: 100%;
  text-align: left;
  padding-bottom: 2%;
}

header a {
  margin-right: 20px;
}

header a:last-child {
  margin-right: 0
}

.muted {
  color: var(--gray);
}

.muted a {
  color: var(--cyan);
  border-bottom: unset;
}

table {
  width: 100%;
}

td {
  white-space: nowrap;
}

td:first-child {
  width: 100%;
  max-width: 1px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

a {
  color: var(--gray);
  margin: 0;
  transition: all 200ms;
  text-decoration: none;
  outline: 0;
}

a:hover {
  color: var(--dark);
  background: var(--light-gray);
  border-bottom: 1px solid var(--cyan);
}

img {
  max-width: 100%;
  margin: 0 auto;
  display: block;
  border: 0px solid transparent;
  border-radius: 5px;
}


.license a {
  color: unset;
  background: unset;
  border-bottom: unset;
}

.license a:hover {
  color: unset;
  background: unset;
  border-bottom: unset;
}

.subtitle {
  font-style: italic;
  color: var(--dark);
  padding-bottom: 30px;
}

h1, h2, h3 {
  font-weight: normal;
}

h2 { 
  color: var(--gray);
}

h3 {
  color: black;
}

p {
  bottom: 2em;
}

blockquote {
  border-left: 0.25rem solid var(--gray);
  color: var(--gray);
  font-style: italic;
  margin: .8rem 0;
  padding: .5rem 1rem
}

hr {
  width: 20%;
}

::selection {
  background-color: var(--sel);
  color: white;
}

@media only screen and (max-width: 70em) {
  pre {
    overflow-x: auto;
  }
}

.license img {
  all: initial;
}

.license img {
  padding-left: 3%;
  padding-top: 10px;
  max-height: 2rem;
  display: inline-block;
  vertical-align: text-top;
  image-orientation: from-image;
  max-width: 100%;
  padding-bottom: 5px;
  cursor: pointer;
}

